--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "@strapi/provider-upload-aws-s3": "^4.11.0",
     "@strapi/strapi": "4.10.6",
     "better-sqlite3": "8.0.1",
-    "pg": "^8.11.0"
+    "pg": "^8.11.0",
+    "strapi-location-field-plugin": "^1.2.2"
   },
   "author": {
     "name": "A Strapi developer"
