--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@strapi/plugin-users-permissions": "4.10.6",
     "@strapi/provider-upload-aws-s3": "^4.11.0",
     "@strapi/strapi": "4.10.6",
+    "axios": "^1.7.3",
     "better-sqlite3": "8.0.1",
     "pg": "^8.11.0",
     "strapi-location-field-plugin": "^1.2.2"
